@@ -43,6 +43,7 @@ git-annex (6.20151219) UNRELEASED; urgency=medium
   * unused: Bug fix when a new file was added to the annex, and then
     removed (but not git rmed). git still has the add staged in this case,
     so the content should not be unused and was wrongly treated as such.
+  * migrate: Copy over metadata to new key.
 
  -- Joey Hess <id@joeyh.name>  Sat, 19 Dec 2015 13:31:17 -0400
 
